Front-end update

--- a/templates/aep/home_aep.html.twig
+++ b/templates/aep/home_aep.html.twig
@@ -9,6 +9,8 @@
             minus qui at dolore sint illum rerum ratione numquam quas doloremque 
             ea inventore explicabo in nulla sit itaque sapiente, ad maxime quam 
             consequatur porro. Quos quo eum vel qui harum!</p>
-        <button><a href="{{ path('aep_type') }}">Remplir une AEP</a></button>
+        <p>
+            <a href="{{ path('aep_type') }}" class="btn btn-primary">Remplir une AEP</a>
+        </p>
     </section>
 {% endblock %}
