--- a/templates/aep/source_aep.html.twig
+++ b/templates/aep/source_aep.html.twig
@@ -7,9 +7,9 @@
         <h1>Renseignez la source d'AEP : {{ source }}</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In voluptate 
             esse expedita temporibus praesentium vitae?</p>
-        <p><button><a href="{{ path('aep_new', {'type': source, 'src': 'pmh'}) }}">PMH</a></button></p>
-        <p><button><a href="{{ path('aep_new', {'type': source, 'src': 'source-amelioree'}) }}">Source améliorée</a></button></p>
-        <p><button><a href="{{ path('aep_new', {'type': source, 'src': 'puit-traditionel'}) }}">Puit traditionnel</a></button></p>
-        <p><button><a href="{{ path('aep_new', {'type': source, 'src': 'autre'}) }}">Autre</a></button></p>
+        <p><a href="{{ path('aep_new', {'type': source, 'src': 'pmh'}) }}" class="btn btn-primary">PMH</a></p>
+        <p><a href="{{ path('aep_new', {'type': source, 'src': 'source-amelioree'}) }}" class="btn btn-primary">Source améliorée</a></p>
+        <p><a href="{{ path('aep_new', {'type': source, 'src': 'puit-traditionel'}) }}" class="btn btn-primary">Puit traditionnel</a></p>
+        <p><a href="{{ path('aep_new', {'type': source, 'src': 'autre'}) }}" class="btn btn-primary">Autre</a></p>
     </section>
 {% endblock %}
