--- a/templates/aep/type_aep.html.twig
+++ b/templates/aep/type_aep.html.twig
@@ -7,8 +7,8 @@
         <h1>Renseignez une AEP</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In voluptate 
             esse expedita temporibus praesentium vitae?</p>
-        <p><button><a href="{{ path('aep_source', {'type': 'forage'}) }}">Forage</a></button></p>
-        <p><button><a href="{{ path('aep_source', {'type': 'prise-en-eau-de-surface'}) }}">Prise en eau de surface</a></button></p>
-        <p><button><a href="{{ path('aep_source', {'type': 'captage-par-source'}) }}">Captage par source</a></button></p>
+        <p><a href="{{ path('aep_source', {'type': 'forage'}) }}" class="btn btn-primary">Forage</a></p>
+        <p><a href="{{ path('aep_source', {'type': 'prise-en-eau-de-surface'}) }}" class="btn btn-primary">Prise en eau de surface</a></p>
+        <p><a href="{{ path('aep_source', {'type': 'captage-par-source'}) }}" class="btn btn-primary">Captage par source</a></p>
     </section>
 {% endblock %}
