--- a/templates/security/form_user.html.twig
+++ b/templates/security/form_user.html.twig
@@ -12,21 +12,19 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h6 class="card-text text-center">Informations personnelles</h3>
+                    <h4 class="card-text text-center text-dark">Vos informations</h4>
                 </div>
                 <div class="card-body">
 
                     {{ form_start(form_user) }}
-                        {{ form_row(form_user.email, {'label': 'Email', 'attr': {'placeholder': 'votre adresse email'}}) }}
-                        {{ form_row(form_user.password, {'label': 'Mot de passe', 'attr': {'placeholder': 'votre mot de passe'}}) }}
-                        <div class="form-group">
-                            <label for="password_confirm">Confirmez le mot de passe</label>
-                            <input type="password" name="password_confirm" id="password_confirm" class="form-control" placeholder="confirmez votre mot de passe">
-                        </div>
+                        {{ form_row(form_user.username, {'label': "Nom d'utilisateur", 'attr': {'placeholder': "Nom d'utilisateur"}}) }}
+                        {{ form_row(form_user.email, {'label': 'Adresse email', 'attr': {'placeholder': 'Adresse email'}}) }}
+                        {{ form_row(form_user.password, {'label': 'Mot de passe', 'attr': {'placeholder': 'Mot de passe !'}}) }}
+                        {{ form_row(form_user.password_confirm, {'label': 'Répéter le mot de passe', 'attr': {'placeholder': 'Répéter le mot de passe !'}}) }}
 
                         <div class="form-group row">
                             <div class="col-sm-9 offset-sm-4">
-                                <button id="submit" class="btn btn-primary" name="signup" value="Sign up">Sign up</button>
+                                <button id="submit" class="btn btn-primary" name="signup" value="Sign up">Inscription !</button>
                             </div>
                         </div>
                     {{ form_end(form_user) }}
