--- a/templates/aep/aep_liste.html.twig
+++ b/templates/aep/aep_liste.html.twig
@@ -1,34 +1,62 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <h1>Liste des AEP</h1>
-    <table class="table table-dark">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Type</th>
-            <th scope="col">Source</th>
-            <th scope="col">Année de construction</th>
-            <th scope="col">Capacité de production</th>
-            <th scope="col">Remplir par</th>
-            <th scope="col">Lien de consultation</th>
-          </tr>
-        </thead>
-        <tbody>
+    <div id="aep-list">
+        <h3 class="mb-2">{{ title|raw }}</h3>
 
-          {% set i = 1 %}
-            {% for aep in liste_aep %}
-              <tr>
-                  <th scope="row">{{ i }}</th>
-                  <td>{{ aep.aep.type }}</td>
-                  <td>{{ aep.aep.source }}</td>
-                  <td>{{ aep.aep.buildingYear|date("d/m/Y") }}</td>
-                  <td>{{ aep.aep.productionCapacity }}</td>
-                  <td>{{ aep.user.name }}</td>
-                  <td><a href="{{ path('aep_show', {'id': aep.aep.id}) }}" class="btn btn-primary">Lire la suite</a></td>
-                  {% set i = i +1 %}
-              </tr>
-            {% endfor %}
-        </tbody>
-      </table>
+        {{ form_start(form_search) }}
+
+            <div class="row border-0 custom-line">
+                <div class="form-group mb-5 col-9 mx-0 py-0" style="position: relative;">
+                    {{ form_widget(form_search.value, {'attr': {'placeholder': 'search' ,'class': 'autocomplete-search', 'arial-label': 'Search'}}) }}
+                    <input type="search" id="autocomplete-ajax-search" class="form-control" name="" disabled="disabled" style="color: #CCC; position: absolute; z-index: 1;"/>
+                    
+                    <div class="form-error">
+                        {{ form_errors(form_search.property) }}
+                    </div>
+                </div>
+                {{ form_row(form_search.property, {'attr': {'class': 'property'}}) }}
+                {{ form_row(form_search.entity, {'attr': {'class': 'entity'}}) }}
+                <div class="col-3 ml-0">
+                    
+                        <!-- <input type="submit" class="border-0 bg-transparent text-light d-block" value="Search"> -->
+                        {{ form_row(form_search.search) }}
+                    
+                </div>
+            </div>
+
+        {{ form_end(form_search) }}
+
+        <div class="table-responsive py-5">
+            <table class="table table-dark table-bordered table-hover">
+                <thead class="thead-light">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Type</th>
+                    <th scope="col">Source</th>
+                    <th scope="col">Année de construction</th>
+                    <th scope="col">Capacité de production</th>
+                    <th scope="col">Remplir par</th>
+                    <th scope="col">Lien de consultation</th>
+                </tr>
+                </thead>
+                <tbody>
+    
+                {% set i = 1 %}
+                    {% for aep in aeps %}
+                    <tr>
+                        <th scope="row">{{ i }}</th>
+                        <td>{{ aep.type }}</td>
+                        <td>{{ aep.source }}</td>
+                        <td>{{ aep.buildingYear|date("d/m/Y") }}</td>
+                        <td>{{ aep.productionCapacity }}</td>
+                        <td>{{ aep.user.name }}</td>
+                        <td><a href="{{ path('aep_show', {'id': aep.id}) }}" class="btn btn-primary">Lire la suite</a></td>
+                        {% set i = i +1 %}
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 {% endblock %}
